--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<<<<<<< HEAD
     <color name="start_color">#036107</color>
     <color name="center_color">#2BD333</color>
     <color name="button_color">#038E08</color>
     <color name="end_color">#D0DFD1</color>
+    <color name="text">#05750A</color>
 =======
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
