--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -136,7 +136,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginLeft="10dp"
             android:text="@string/s_inscrire"
-            android:textColor="#046009"
+            android:textColor="@color/text"
             android:textSize="17sp"
             android:textStyle="bold" />
     </LinearLayout>
