--- a/app/src/main/res/layout/activity_espace.xml
+++ b/app/src/main/res/layout/activity_espace.xml
@@ -10,7 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_centerInParent="true"
         android:orientation="vertical">
         <ImageView
             android:id="@+id/imageView2"
@@ -61,7 +60,7 @@
             android:textColor="#011302"
             />
         <TextView
-            android:id="@+id/Se_connecter"
+            android:id="@+id/ESe_connecter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
