--- a/app/src/main/res/layout/activity_register_client.xml
+++ b/app/src/main/res/layout/activity_register_client.xml
@@ -23,7 +23,6 @@
             android:background="@drawable/button_background"
             android:textSize="25sp"/>
         <LinearLayout
-            android:id="@+id/linearLayout2"
             android:layout_width="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_height="wrap_content"
@@ -37,7 +36,7 @@
                 app:srcCompat="@drawable/profile" />
 
             <EditText
-                android:id="@+id/FullName"
+                android:id="@+id/CfullName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -49,7 +48,6 @@
                 android:inputType="text" />
         </LinearLayout>
         <LinearLayout
-            android:id="@+id/linearLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -62,7 +60,7 @@
                 app:srcCompat="@drawable/emailicon" />
 
             <EditText
-                android:id="@+id/email"
+                android:id="@+id/Cemail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -86,7 +84,7 @@
                 app:srcCompat="@drawable/telephone" />
 
             <EditText
-                android:id="@+id/telephone"
+                android:id="@+id/Ctelephone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -95,7 +93,7 @@
                 android:layout_weight="1"
                 android:ems="13"
                 android:hint="@string/Tele"
-                android:inputType="phone"/>
+                android:inputType="phone" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="wrap_content"
@@ -110,7 +108,7 @@
                 app:srcCompat="@drawable/passwordicon" />
 
             <EditText
-                android:id="@+id/password"
+                android:id="@+id/Cpassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -134,7 +132,7 @@
                 app:srcCompat="@drawable/passwordicon" />
 
             <EditText
-                android:id="@+id/passwordConfi"
+                android:id="@+id/CpasswordConfi"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -146,7 +144,7 @@
                 android:inputType="textPassword"/>
         </LinearLayout>
         <TextView
-            android:id="@+id/valider"
+            android:id="@+id/Cvalider"
             android:layout_width="350dp"
             android:layout_marginTop="24dp"
             android:layout_height="wrap_content"
@@ -173,7 +171,7 @@
             android:textColor="#011302"
             />
         <TextView
-            android:id="@+id/Se_connecter"
+            android:id="@+id/CSe_connecter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
@@ -184,5 +182,13 @@
             android:textStyle="bold"
             android:text="@string/se_connecter"/>
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/CprogressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone"/>
 
 </RelativeLayout>
