--- a/app/src/main/res/layout/activity_pharmacie_profile.xml
+++ b/app/src/main/res/layout/activity_pharmacie_profile.xml
@@ -1,81 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/app_background"
     tools:context=".PharmacieProfile">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <LinearLayout
-            android:id="@+id/layout1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="4dp">
-            <TextView
-                android:id="@+id/messanger"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/messanger"
-                android:textSize="16sp"
-                android:gravity="center"
-                android:layout_weight="1"
-                android:padding="2dp"
-                android:background="@drawable/button_back" />
-            <TextView
-                android:id="@+id/ajouter_service"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/ajouter_un_service"
-                android:textSize="16sp"
-                android:gravity="center"
-                android:layout_weight="1"
-                android:padding="2dp"
-                android:background="@drawable/button_back"/>
-            <TextView
-                android:id="@+id/status"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/status"
-                android:textSize="16sp"
-                android:gravity="center"
-                android:layout_weight="1"
-                android:padding="2dp"
-                android:background="@drawable/button_back"/>
-        </LinearLayout>
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <TextView
-                android:id="@+id/ajouter_servie"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/ajouter_un_service"
-                android:textSize="16sp"
-                android:gravity="center"
-                android:layout_weight="1"
-                android:padding="2dp"
-                android:background="@drawable/button_back"/>
-            <TextView
-                android:id="@+id/staus"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/status"
-                android:textSize="16sp"
-                android:gravity="center"
-                android:layout_weight="1"
-                android:padding="2dp"
-                android:background="@drawable/button_back"/>
 
-        </LinearLayout>
-        </ScrollView>
-    </LinearLayout>
-</RelativeLayout>
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tablayout"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tabIndicatorHeight="4dp"
+        app:tabMode="fixed"
+        android:background="@color/end_color"
+        app:tabPaddingBottom="6dp"
+        app:tabPaddingTop="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+    <View
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        app:layout_constraintTop_toBottomOf="@+id/tablayout"
+        android:background="@color/start_color"/>
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewpager2"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view" />
+</androidx.constraintlayout.widget.ConstraintLayout>
