--- a/app/src/main/res/drawable/pip_back.xml
+++ b/app/src/main/res/drawable/pip_back.xml
@@ -2,5 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
     android:visible="false">
-    <solid android:color="@color/center_color"/>
+    <solid android:color="@color/end_color"
+        />
+    <stroke android:width="2dp"/>
 </shape>
