--- a/app/src/main/res/layout/fragment_status.xml
+++ b/app/src/main/res/layout/fragment_status.xml
@@ -5,11 +5,74 @@
     android:layout_height="match_parent"
     tools:context=".StatusFragment">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:textSize="20sp"
-        android:text="Status fragment" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="vertical"
+        android:padding="4dp">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:padding="2dp"
+            android:background="@drawable/pip_back"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/FOff"
+                android:layout_width="150dp"
+                android:layout_height="50dp"
+                android:gravity="center"
+                android:background="@color/ouvert"
+                android:text="@string/fermer"
+                android:textSize="30sp" />
+            <TextView
+                android:id="@+id/FOn"
+                android:layout_width="150dp"
+                android:layout_height="50dp"
+                android:gravity="center"
+                android:background="@color/fermee"
+                android:text="@string/ouvert"
+                android:textSize="30sp" />
+        </LinearLayout>
+        <TextView
+            android:id="@+id/textStatus"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:padding="4dp"
+            android:text="@string/l_agence_est_fermer"
+            android:textSize="15sp" />
+        <TextView
+            android:layout_marginTop="24dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:layout_marginEnd="10dp"
+            android:background="@color/end_color"
+            android:layout_marginStart="10dp"
+            android:padding="4dp"
+            android:text="@string/message_pour_pharmacie"
+            android:textSize="18sp"
+            android:layout_marginRight="10dp" />
+        <TextView
+            android:layout_marginEnd="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:gravity="right"
+            android:background="@color/end_color"
+            android:padding="4dp"
+            android:text="@string/merci"
+            android:textSize="18sp"
+            android:layout_marginRight="10dp"
+            tools:ignore="RtlHardcoded" />
+    </LinearLayout>
+
 
 </FrameLayout>
