--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="button_color">#038E08</color>
     <color name="end_color">#D0DFD1</color>
     <color name="text">#05750A</color>
+    <color name="ouvert">#05F415</color>
+    <color name="fermee">#F61739</color>
 =======
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
