--- a/app/src/main/res/layout/activity_pharmacie_profile.xml
+++ b/app/src/main/res/layout/activity_pharmacie_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/app_background"
-    tools:context=".PharmacieProfile">
+    tools:context=".pharmacie.PharmacieProfile">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tablayout"
