--- a/app/src/main/res/layout/activity_register_client.xml
+++ b/app/src/main/res/layout/activity_register_client.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="@drawable/app_background"
     android:layout_height="match_parent"
-    tools:context=".RegisterClient">
+    tools:context=".client.RegisterClient">
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
