--- a/app/src/main/res/layout/activity_desplay_pharmacie_info.xml
+++ b/app/src/main/res/layout/activity_desplay_pharmacie_info.xml
@@ -14,11 +14,11 @@
         android:layout_width="match_parent"
         android:layout_height="150dp">
 
-        <com.google.android.gms.maps.MapView
-            android:id="@+id/mapView"
+        <ImageView
+            android:id="@+id/maps"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_centerHorizontal="true" />
+            android:src="@drawable/map"/>
         <TextView
             android:id="@+id/texSetnom"
             android:layout_width="wrap_content"
