--- a/app/src/main/res/menu/menu_main_activity.xml
+++ b/app/src/main/res/menu/menu_main_activity.xml
@@ -4,6 +4,8 @@
     <group android:visible="true">
         <item android:title="@string/language"
             android:id="@+id/langage"/>
+        <item android:title="@string/aide"
+            android:id="@+id/help_me"/>
         <item android:title="@string/qui_somme_nous"
             android:id="@+id/about_us"/>
     </group>
