--- a/app/src/main/res/layout/activity_desplay_pharmacie_info.xml
+++ b/app/src/main/res/layout/activity_desplay_pharmacie_info.xml
@@ -34,6 +34,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_margin="6dp"
+        android:visibility="gone"
         android:background="@drawable/pip_back"
         android:padding="2dp">
         <EditText
