--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -5,12 +5,94 @@
     android:layout_height="match_parent"
     tools:context=".pharmacie.ChatFragment">
 
-    <TextView
-        android:id="@+id/text"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:textSize="20sp"
-        android:text="chat fragmnt" />
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_margin="10dp"
+            >
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="4dp"
+                android:layout_margin="4dp"
+                android:src="@drawable/logo"
+                android:layout_gravity="center"/>
+            <TextView
+                android:background="@drawable/pip_back"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="4dp"
+                android:layout_gravity="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:id="@+id/setNom"
+                android:padding="4dp"
+                />
+            <TextView
+                android:background="@drawable/pip_back"
+                android:layout_width="match_parent"
+                android:layout_margin="4dp"
+                android:layout_gravity="center"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:id="@+id/setemail"
+                android:padding="4dp"
+                />
+            <TextView
+                android:layout_margin="4dp"
+                android:background="@drawable/pip_back"
+                android:layout_width="match_parent"
+                android:layout_gravity="center"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:id="@+id/setTele"
+                android:padding="4dp"
+                />
+            <TextView
+                android:layout_margin="4dp"
+                android:background="@drawable/pip_back"
+                android:layout_width="match_parent"
+                android:layout_gravity="center"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:id="@+id/setlatitude"
+                android:padding="4dp"
+                />
+            <TextView
+                android:layout_margin="4dp"
+                android:background="@drawable/pip_back"
+                android:layout_width="match_parent"
+                android:layout_gravity="center"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:id="@+id/setlongitude"
+                android:padding="4dp"
+                />
+            <TextView
+                android:layout_margin="4dp"
+                android:background="@drawable/pip_back"
+                android:layout_width="match_parent"
+                android:layout_gravity="center"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:id="@+id/setville"
+                android:padding="4dp"
+                />
+        </LinearLayout>
+
+        <ProgressBar
+            android:id="@+id/progressBar5"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="gone"/>
+    </RelativeLayout>
+
+
 
 </FrameLayout>
