--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -11,7 +11,7 @@
         android:id="@+id/help_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/action_aide"
+        android:text="Aide"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +33,7 @@
         android:id="@+id/help_body"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/action_help"
+        android:text="Si vous avez besoin d'aide, contactez notre service d'assistance."
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
