--- a/app/src/main/res/layout/activity_help_me.xml
+++ b/app/src/main/res/layout/activity_help_me.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#EC1414"
-            android:text="@string/aide_action"
+            android:text="Aide"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             />
 
