--- a/app/src/main/res/layout/activity_desplay_pharmacie_info.xml
+++ b/app/src/main/res/layout/activity_desplay_pharmacie_info.xml
@@ -72,5 +72,20 @@
         android:outlineSpotShadowColor="@color/black"
         android:layout_height="wrap_content"
         android:visibility="invisible"/>
+    <LinearLayout
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/oval_button"
+        android:layout_margin="@dimen/fab_margin">
+        <ImageView
+            android:id="@+id/callMe"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="6dp"
+            android:src="@drawable/ic_call"/>
+    </LinearLayout>
 
 </RelativeLayout>
