--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -18,5 +18,8 @@
             android:id="@+id/nav_share"
             android:icon="@drawable/ic_share"
             android:title="@string/share" />
+        <item android:title="@string/log_out"
+            android:id="@+id/log_out_actionC"
+            />
     </group>
 </menu>
