--- a/app/src/main/res/menu/menu_client.xml
+++ b/app/src/main/res/menu/menu_client.xml
@@ -18,4 +18,7 @@
             android:icon="@drawable/ic_share"
             android:title="@string/share"/>
     </group>
+    <item android:title="@string/log_out"
+        android:id="@+id/log_out_actionC"
+        />
 </menu>
